--- a/jest.config.json
+++ b/jest.config.json
@@ -1,7 +1,7 @@
 {
   "collectCoverage": true,
   "collectCoverageFrom": [
-    "src/**/*.{ts}",
+    "src/**/*.ts",
     "!**/node_modules/**",
     "!**/vendor/**"
   ],
