--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,19 @@
 {
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./src/tsconfig.json"
+    "project": "./tsconfig.json"
   },
   "extends": [
     "airbnb-typescript/base",
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:import/typescript",
+    "plugin:jest/all",
     "prettier"
   ],
   "env": {
     "node": true,
-    "browser": true
+    "browser": true,
+    "jest": true
   }
 }
