Fix build command and build outdir

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "outDir": "./dist",
     "removeComments": true,
     "resolveJsonModule": true,
-    "rootDir": "./",
+    "rootDir": "./src",
     "skipLibCheck": true,
     "strict": true
   },
