--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starter-node-typescript",
   "scripts": {
-    "build": "rimraf ./dist && tsc -p ./src/tsconfig.json",
+    "build": "rimraf ./dist && tsc",
     "dev": "ts-node ./src",
     "lint": "eslint src/**/*.ts",
     "test": "jest"
