--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.0",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/rimraf": "^3.0.0",
@@ -26,5 +27,8 @@
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "figlet": "^1.5.0"
   }
 }
