--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,15 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "[yaml]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[markdown]": {
+    "editor.wordWrap": "wordWrapColumn"
+  },
+  "[python]": {
+    "editor.tabSize": 4
+  },
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
