--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
   "name": "starter-node-typescript",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
+    "build": "rimraf ./build && tsc",
     "dev": "ts-node ./src",
     "lint": "eslint src/**/*.ts",
     "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.41",
+    "@jest/types": "^26.6.2",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
     "@types/rimraf": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.5",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint": "^7.25.0",
+    "eslint-config-mkvlrn": "^12.1.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.5",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
