--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,13 @@
       "ES6"
     ],
     "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "noEmit": false,
-    "outDir": "./dist",
+    "outDir": "./build",
     "removeComments": true,
     "resolveJsonModule": true,
     "rootDir": "./src",
