--- a/package.json
+++ b/package.json
@@ -6,18 +6,55 @@
     "lint": "eslint src/**/*.ts",
     "test": "jest"
   },
+  "dependencies": {},
   "devDependencies": {
     "@jest/types": "^26.6.2",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.2",
+    "@types/node": "^15.3.0",
     "@types/rimraf": "^3.0.0",
-    "eslint": "^7.25.0",
-    "eslint-config-mkvlrn": "^12.1.0",
+    "eslint": "^7.26.0",
+    "eslint-config-mkvlrn": "^12.2.0",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "mkvlrn/ts"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "./tests/*.ts"
+        ],
+        "parserOptions": {
+          "project": "tsconfig.test.json"
+        }
+      }
+    ]
+  },
+  "eslintIgnore": [
+    "build"
+  ],
+  "prettier": {
+    "overrides": [
+      {
+        "files": [
+          "*.json",
+          "*.jsonc"
+        ],
+        "options": {
+          "parser": "json-stringify"
+        }
+      }
+    ]
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "jest-environment-node",
+    "verbose": true
   }
 }
