Fix eslint override for test file

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
           "./tests/*.ts"
         ],
         "parserOptions": {
-          "project": "tsconfig.test.json"
+          "project": "./tsconfig.test.json"
         }
       }
     ]
